# qrcode-pretty

./: PACKAGING.md  PKGBUILD  README.md  flake.nix  pyproject.toml  shell.nix  test_images.py
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml  test-release.yaml
debian/: changelog
docs/: CONTRIBUTING.md
pkgs/: default.nix
src/qrcode_pretty/: const.py  entrypoint.py  input_image_utils.py  qr_code_generator.py  svg_utils.py
tests/: test_gap_investigation.py  test_horizontal_bars.py  test_images.py  test_simple_qr.py  test_svg_generation.py
