[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrcode-pretty"
version = "1.0.5"
description = "A tool which generates pretty QR codes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "afkdev8", email = "mail@afkdev8.com"},
]
keywords = ["qrcode", "qr", "generator", "pretty", "customizable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "qrcode[pil]>=7.0",
    "pillow>=9.0",
]

[project.urls]
Homepage = "https://www.afkdev8.com/"
Repository = "https://github.com/mrinfinidy/qrcode-pretty"
Issues = "https://github.com/mrinfinidy/qrcode-pretty/issues"

[project.scripts]
qrcode-pretty = "qrcode_pretty.entrypoint:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0"
]
[tool.hatch.build.targets.wheel]
packages = ["src/qrcode_pretty"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
